
01/02/08
o Change gmScanner.l so parser checks for End Of File, to prevent endless loop.

11/04/09
o Add GM_CHECK_THIS_* macros to gmThread.h.  Thanks Downgraded.
o Add experimental and optional fork instruction.  Configured as GM_USE_FORK in gmConfig.h. Thanks HiVision.

12/04/09
o Add experimental foreach support for user types. Configured as GM_USER_FOREACH in gmConfig.h.  Thanks Downgraded.

23/04/09
o Add gmMachine::GetTypeId() to retrieve type id from string name. Thanks Downgraded.
o Updated version number, oops.

02/05/09
o Fixed getind in gmThread.cpp where usertypes influenced the operator chosen to process. Thanks DrEvil.

06/05/09
o Add experimental endon() allowing a thread to be killed when signalled. Enabled with GM_USE_ENDON in gmConfig.h.  Thanks Downgraded.
o Fixed (hopefully) endon() kills threads correctly and gets along with other blocks and signals.

05/06/09
o Fix and improve format() Thanks DrEvil.
o Add some more gmVariable accessors (similar to gm_ex)

25/01/10
o Remove orphaned code in gmBlock dated 25/10/04 "Changed behaviour of Block() to yeild if blocked on 'null'."
o Changed block on null behavior to cause script thread exception.
o Fix signal behavior so multiple signals cannot accumulate on a blocked thread. Thanks DrEvil.
o Changing gm version format from vMajor.Minor.BetaLetter to vMajor.Minor.Build. Probably won't change coded version to store past Minor unless process is automated. Probably won't use 4 components as each can be multi digit.

04/02/10
o Changed new to GM_NEW in gmCodeGen.cpp for consistency.  Thanks Sunray.

15/03/10
o Fix GC auto calibration. Thanks DrEvil.

27/05/10
o Improved Minimal example.  Not all errors were logged. Also enabled debug mode. Thanks xaxa.

09/07/10
o Updated code base for 64bit address target. (64bit builds of current binaries not made or tested yet.) 
o Updated system lib for 64bit Win OS compatibility.